--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,10 @@
 	<title>Webpack Boilerplate</title>
 	<script src="./main.bundle.js" type="text/javascript" charset="utf-8" async defer></script>
 </head>
+
 <body>
-	The boilerplate for a webpack project.
+	<div class="absolute-center">
+		<canvas id="main" width="250" height="250"></canvas>
+	</div>
 </body>
 </html>
